Add feat_1 to code

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <script>
         alert("Hi")
     </script>
+    <script class="feat_1">
+        alert("bye!")
+    </script>
 </body>
 </html>
